force-app/main/default/objects/BookCheckpoint__c/BookCheckpoint__c.object-meta.xml
<CustomObject>
    <label>Book Checkpoint</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CheckpointNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Checkpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>