force-app/main/default/objects/BookCheckpoint__c/fields/Chapter__c.field-meta.xml
<CustomField>
    <fullName>Chapter__c</fullName>
    <label>Chapter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>