force-app/main/default/objects/BookCheckpoint__c/fields/CurrentPage__c.field-meta.xml
<CustomField>
    <fullName>CurrentPage__c</fullName>
    <label>Current Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>