force-app/main/default/objects/BookCheckpoint__c/fields/CurrentProgress__c.field-meta.xml
<CustomField>
    <fullName>CurrentProgress__c</fullName>
    <label>Current Progress</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>